--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <html>
-  <head>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <title>Demo</title>
-  </head>
-  <body>
-    <main>
+
+<head>
+  <link rel="stylesheet" href="./styles/style.css" />
+  <title>Big Dipper</title>
+</head>
+
+<body>
+  <header class="header">
+    <div class="container">
+      <span class="header-title">Big Dipper</span>
+    </div>
+  </header>
+  <main>
+    <div class="container">
       <div class="templates" style="display: none">
         <div class="brand-card brand-template">
           <h2 class="brand-title">Brand title</h2>
@@ -22,7 +30,9 @@
         </div>
       </div>
       <section class="brands-section"></section>
-    </main>
-    <script src="./js/script.js"></script>
-  </body>
+    </div>
+  </main>
+  <script src="./js/script.js"></script>
+</body>
+
 </html>
