adding view and compare button in each mobile-card-template

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <div class="mobile-ram">test ram</div>
           </div>
           <div class="mobile-price">test price</div>
+          <div class="btn-div">
+              <button class="button view">VIEW</button>
+              <button class="button compare">COMPARE</button>
+          </div>
         </div>
       </div>
       <section class="brands-section"></section>
