added compare feature button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <div class="mobile-ram">test ram</div>
           </div>
           <div class="mobile-price">test price</div>
+
+          <div class="btn-div">
+            <!-- <button class="button view">VIEW</button> -->
+            <button class="button compare" onclick=alert(this.parentElement.parentElement.childNodes[1].innerText)>COMPARE</button>
+          </div>
         </div>
       </div>
       <section class="brands-section"></section>
