create a template for modal

--- a/index.html
+++ b/index.html
@@ -33,10 +33,53 @@
           </div>
         </div>
       </div>
+
+
+      <div  class="modal-view-section modal">
+          
+          <div class="model-view-template modal-content">
+              <div class="close-div">
+                  <span class="close">&times;</span>
+              </div>
+              <div class="model-view-top">
+                  <div class="model-view-top-img">
+                      <img id="mobile-img">
+                  </div>
+                  <div class="model-view-desc">
+                       <ul class="modal-view-list">
+                           <li id="mobile-model"></li>
+                           <li id="mobile-Ram"></li>
+                           <li id="mobile-Rom"></li>
+                           <li id="mobile-camera"></li>
+                           <li id="mobile-battery"></li>
+                           <li id="mobile-processor"></li>
+                           <li id="mobile-screensize"></li>
+                           <li id="mobile-simType"></li>
+                           <li id="mobile-otgcompatible"></li>
+                       </ul>
+                  </div>
+              </div>
+              <div class="model-view-bottom">
+                  <ul class="modal-view-list">
+                      <li id="mobile-price"></li>
+                      <li id="mobile-Rating"></li>
+                      <li id="mobile-ModelNo"></li>
+                      <li id="mobile-color"></li>
+                     
+                  </ul>
+              </div>
+          </div>
+  
+        </div>
+
       <section class="brands-section"></section>
     </div>
+
+
+
   </main>
   <script src="./js/script.js"></script>
+  <script src="./features/viewModel/viewModel.js"></script>
 </body>
 
 </html>
