--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
   <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <title>Big Dipper</title>
 </head>
 
@@ -30,14 +32,36 @@
 
           <div class="btn-div">
             <!-- <button class="button view">VIEW</button> -->
-            <button class="button compare" onclick=alert(this.parentElement.parentElement.childNodes[1].innerText)>COMPARE</button>
+            <button class="button compare" onclick=Compare(this.parentElement.parentElement.childNodes[1].innerText)>COMPARE</button>
           </div>
         </div>
       </div>
+
       <section class="brands-section"></section>
+
+
+      <div class="compare-container container">
+          <div class="compare-mobile-1">
+              <img id="mobile-one" src="" alt="">
+              <h3 id="mobile-name-one"></h3>
+              <button onclick=removeMobile(this.id); id="mobile-remove-btn-one"><i class="fa fa-close"></i></button>
+
+          </div>
+          <div class="compare-mobile-2">
+              <img id="mobile-two" src="" alt="">
+              <h3 id="mobile-name-two"></h3>
+              <button onclick=removeMobile(this.parentElement.childNodes[2].innerText); id="mobile-remove-btn-one"><i class="fa fa-close"></i></button>
+          </div>
+          <div class="compare-now-button">
+            <button id="compare-btn" disabled>compareNow</button>
+            
+          </div>
+        </div>
     </div>
+
   </main>
   <script src="./js/script.js"></script>
+  <script src="./features/compare/compare.js"></script>
 </body>
 
 </html>
