--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
 
 <body>
   <header class="header">
-    <div class="container">
+    <div class="container header-alignment">
       <span class="header-title">Big Dipper</span>
-    </div>
+      <div class="search-section">
+          <div class="input-wrapper">
+          <input type="text" placeholder="search for Brand or RAM or Model " class="input-section" id="search">
+          </div>
+          <div class="submit-wrapper">
+          <input type="submit" value="search" class="submit-section pointer" id="submit-button">
+        </div>
+        </div>
+    </div>   
   </header>
   <main>
     <div class="container">
+      <div class="mobile-search-card"></div>
       <div class="templates" style="display: none">
         <div class="brand-card brand-template">
           <h2 class="brand-title">Brand title</h2>
@@ -33,6 +42,7 @@
     </div>
   </main>
   <script src="./js/script.js"></script>
+  <script src="./features/search/search.js"></script>
 </body>
 
 </html>
