--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="mobile-price">test price</div>
           <div class="btn-div">
-              <button id="view-btn" class="button view"  >VIEW</button>
+              <button id="view-btn" class="button view view-btn"  >VIEW</button>
               <!-- <button class="button compare">COMPARE</button> -->
           </div>
         </div>
@@ -39,7 +39,7 @@
           
           <div class="model-view-template modal-content">
               <div class="close-div">
-                  <button class="close">&times;</button>
+                  <span id="close"class="close" >&times;</sapn>
               </div>
               <div class="model-view-top">
                   <div class="model-view-top-img">
