--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- </div> -->
       </div>
 
-      <div id="modal" class="container">
+      <div id="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
             <table class="table-template comparation-table">
