--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="./styles/bootstrap.css">
+  <script src="./js/bootstrap_native_min.js"></script>
   <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./features/recentLaunch/recentLaunch.css">
+
   <title>Big Dipper</title>
 </head>
 
@@ -12,7 +16,26 @@
     </div>
   </header>
   <main>
+      <div class="recent-launches-carousel-container">
+        <h2 class="recent-launch-hdr"> Recent Launch</h2>
+              <div id="recent-launches-carousel" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner recentLaunches-carousel-inner">
+                      
+                      <a class="carousel-control-prev" href="#recent-launches-carousel" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                  </a>
+                      <a class="carousel-control-next" href="#recent-launches-carousel" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                  </a>
+                  </div>
+              </div>
+      </div>
     <div class="container">
+            
+        <div class="recent-lanch-mobiles-sections">
+        </div>
       <div class="templates" style="display: none">
         <div class="brand-card brand-template">
           <h2 class="brand-title">Brand title</h2>
@@ -33,6 +56,7 @@
     </div>
   </main>
   <script src="./js/script.js"></script>
+  <script src="./features/recentLaunch/recentLaunch.js"></script>
 </body>
 
 </html>
