sorting done for date also

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	            <li><a class="sort-pop" data-order="desc" value = "price" href="#">Price-High to Low</a></li>
 	            <li><a class="sort-pop" data-order="desc" value = "ratings" href="#">Rating-High to Low</a></li>
 	            <li><a class="sort-pop" value="ratings" href="#">Rating-Low to High</a></li>
-	            
+	            <li><a class="sort-pop" value="dateOfRelease" href="#">Date-ascending</a></li>
+	            <li><a class="sort-pop" data-order="desc" value="dateOfRelease" href="#">Date-descending</a></li>
 	        </ul>
         </div>
     </div>
@@ -43,6 +44,7 @@
           </div>
           <div class="mobile-price">test price</div>
           <div class="mobile-ratings">test ratings</div>
+          <div class="mobile-date">test date</div>
         </div>
       </div>
 
