--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="./styles/style.css" />
-  <link rel="stylesheet" href="C:/Users/admin/Desktop/js/Project-Big-Dipper/features/sort/sort.css">
+  <link rel="stylesheet" href=".features/sort/sort.css">
   <title>Big Dipper</title>
 </head>
 
