--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="./styles/style.css" />
-  <link rel="stylesheet" href=".features/sort/sort.css">
+  <link rel="stylesheet" href="./features/sort/sort.css" />
   <title>Big Dipper</title>
 </head>
 
@@ -23,8 +23,8 @@
 	            <li><a class="sort-pop" data-order="desc" value = "price" href="#">Price-High to Low</a></li>
 	            <li><a class="sort-pop" data-order="desc" value = "ratings" href="#">Rating-High to Low</a></li>
 	            <li><a class="sort-pop" value="ratings" href="#">Rating-Low to High</a></li>
-	            <li><a class="sort-pop" value="dateOfRelease" href="#">Date-ascending</a></li>
-	            <li><a class="sort-pop" data-order="desc" value="dateOfRelease" href="#">Date-descending</a></li>
+	            <li><a class="sort-pop" value="dateOfRelease" href="#">Oldest</a></li>
+	            <li><a class="sort-pop" data-order="desc" value="dateOfRelease" href="#">Latest</a></li>
 	        </ul>
         </div>
     </div>
