--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./features/search/search.css" />
   <title>Big Dipper</title>
 </head>
 
@@ -11,17 +12,17 @@
       <span class="header-title">Big Dipper</span>
       <div class="search-section">
           <div class="input-wrapper">
+            <p class="search-text"> Search for Brand or RAM or Model : </p>
           <input type="text" placeholder="search for Brand or RAM or Model " class="input-section" id="search">
           </div>
           <div class="submit-wrapper">
           <input type="submit" value="search" class="submit-section pointer" id="submit-button">
         </div>
-        </div>
+      </div>
     </div>   
   </header>
   <main>
     <div class="container">
-      <div class="mobile-search-card"></div>
       <div class="templates" style="display: none">
         <div class="brand-card brand-template">
           <h2 class="brand-title">Brand title</h2>
