clear selection added in filter

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   </div>
                   <div class="check-box-container">
                     <input id = "price-id-5" type="checkbox" class="filter-check mycheck" />
-                    <label class="filter-label" for = "price-id-5">₹above 60000</label>
+                    <label class="filter-label" for = "price-id-5">₹60000-200000</label>
                   </div>
                 </div>
 
@@ -86,7 +86,10 @@
                 </div>
 
 
-                <button id = "submitbutton" class="filter-submit">Apply Filter</button>
+                <button id = "submitbutton" class="filter-submit" style="display: none">Apply Filter</button>
+                <!-- <button id = "submitbutton" class="filter-submit">Clear Filter</button> -->
+                 <button id = "clearbutton" style="display:none">Clear Filter</button>
+                <span style="display: block; text-align: center" id = "displaytext">Select a type to filter</span>
               </div>
             </section>
           </div>
