--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   </div>
                   <div class="check-box-container">
                     <input id = "price-id-5" type="checkbox" class="filter-check mycheck" />
-                    <label class="filter-label" for = "price-id-5">₹60000-200000</label>
+                    <label class="filter-label" for = "price-id-5">above 60000</label>
                   </div>
                 </div>
 
