sorting changes are done

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <head>
   <link rel="stylesheet" href="./styles/bootstrap.css">
-  <script src="./js/bootstrap_native_min.js"></script>
   <link rel="stylesheet" href="./styles/style.css" />
   <link rel="stylesheet" href="./features/recentLaunch/recentLaunch.css">
 
@@ -55,8 +54,10 @@
       <section class="brands-section"></section>
     </div>
   </main>
+  <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
   <script src="./js/script.js"></script>
   <script src="./features/recentLaunch/recentLaunch.js"></script>
+  <script src="./js/bootstrap_native_min.js"></script>
 </body>
 
 </html>
