--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <link rel="stylesheet" href="./styles/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="Project Big Dipper">
   <title>Big Dipper</title>
 </head>
 
@@ -27,12 +30,45 @@
             <div class="mobile-ram">test ram</div>
           </div>
           <div class="mobile-price">test price</div>
+
+          <div class="button-section">
+            <button onclick=compareMobiles(this.parentElement.parentElement); class="button compare">Compare</button>
+          </div>
         </div>
       </div>
       <section class="brands-section"></section>
+      <!-- compare container -->
+      <div class="compare-container container">
+        
+        <div class="show-selected-mobiles">
+          <div data-model='' class="compare-template compare-content">
+            <img class="compare-img" src="" alt="img">
+            <div class="compare-details">
+              <h1 class="compare-details-brand-model">brand Model</h1>
+            </div>
+            <button data-mobile-model='' onclick=removeFunction(this); class="button close-button">&times; </button>
+          </div>
+        </div>
+        <button class="compare-button button" onclick=popUpModal();>compare Now</button>
+      </div>
+      <table class="table-template table-content">
+        <tr class="table-row-template">
+          <td class="table-column-template"></td>
+        </tr>
+      </table>
+      <div id="modal">
+        <div class="modal-content">
+
+          <span class="close">&times;</span>
+          <div class="compare-result result-template"></div>
+        </div>
+
+      </div>
+      <!-- end -->
     </div>
   </main>
   <script src="./js/script.js"></script>
+  <script src="./features/compare/compare.js"></script>
 </body>
 
 </html>
