--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="mobile-price">test price</div>
           <div class="btn-div">
-              <button id="view-btn" class="button view view-btn"  >VIEW</button>
+              <button id="view-btn" class="button view view-btn" onclick="bindClick()" >VIEW</button>
               <!-- <button class="button compare">COMPARE</button> -->
           </div>
         </div>
