--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./features/compare/css/compare.css" />
     <title>Big Dipper</title>
   </head>
 
@@ -41,6 +42,9 @@
               <div class="mobile-ram">test ram</div>
             </div>
             <div class="mobile-price">test price</div>
+            <div class="button-section">
+              <button onclick=compareMobiles(this.parentElement.parentElement); class="button compare">Compare</button>
+            </div>  
           </div>
         </div>
         <section class="brands-section"></section>
@@ -50,9 +54,36 @@
       <!--  end-->
 
       <!--compare start  -->
+      <!-- compare container -->
+      <div class="compare-container container">
+        <div class="show-selected-mobiles">
+          <div data-model='' class="compare-template compare-content">
+            <img class="compare-img" src="" alt="img">
+            <div class="compare-details">
+              <h1 class="compare-details-brand-model">brand Model</h1>
+            </div>
+            <button data-mobile-model='' onclick=removeFunction(this); class="button close-button">&times; </button>
+          </div>
+        </div>
+        <button class="compare-button button" onclick=popUpModal();>compare Now</button>
+      </div>
+      <table class="table-template table-content">
+        <tr class="table-row-template">
+          <td class="table-column-template"></td>
+        </tr>
+      </table>
+      <div id="modal">
+        <div class="modal-content">
 
+          <span class="close">&times;</span>
+          <div class="compare-result result-template"></div>
+        </div>
+
+      </div>
+      <!-- end -->
       <!--  end-->
     </main>
     <script src="./js/script.js"></script>
+    <script src="./features/compare/compare.js"></script>
   </body>
 </html>
