adding closed division

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <div class="btn-div">
               <button id="view-btn" class="button view view-btn">VIEW</button></div>
           </div>
+          </div>
         <section class="brands-section"></section>
       </div>
       <!--view details modal start  -->
