after removing console

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                           type="checkbox"
                           name="brand"
                           class="filter-check brand-filter-check brand-filter-check-temp"
-                          onclick="generateconditions(event)"
                         />
                         <label class="filter-label brand-filter brand-filter-temp"></label>
                       </div>
@@ -94,7 +93,7 @@
 
                 <div id="ram" class="content">
                   <div class="ram-container ram-container-temp">
-                    <input type="checkbox" name="ram" class="filter-check ram-filter-check-temp" data-set="" onclick="generateconditions(event)"/>
+                    <input type="checkbox" name="ram" class="filter-check ram-filter-check-temp" data-set=""/>
                     <label for="" class="filter-label ram-filter-temp"></label>
                   </div>
                 </div>
