class name chnaged

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <!-- The Modal -->
         <div id="myModal" class="modal">
           <!-- Modal content -->
-          <div class="modal-content">
-            <span class="close">&times;</span>
+          <div class="model-popup">
+            <span class="close-filter">&times;</span>
             <section class="filter-section">
               <div class="filter-options">
                   <button
