removing comman names

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <button onclick=compareMobiles(this.parentElement.parentElement); class="button compare">Compare</button>
               </div>
             <div class="btn-div">
-              <button id="view-btn" class="button view view-btn">VIEW</button>
+              <button id="view-btn" class="view-button view view-btn">VIEW</button>
             </div>
           </div>
           </div>
